--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,16 @@ tracing-opentelemetry = "0.10.0"
 tracing-subscriber = "0.2"
 opentelemetry-jaeger = "0.10"
 opentelemetry = { version = "0.11", default-features = false, features = ["trace"] }
+
+[[bin]]
+name = "temp"
+path = "src/main.rs"
+
+[dev-dependencies]
+criterion = { version = "0.4", features = ["html_reports"] }
+rand = "0.8.5"
+
+[[bench]]
+name = "my_benches"
+path = "benches/util/my_benches.rs"
+harness = false
