--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+actix-protobuf = "0.9"
 async-trait = { version = "0.1" }
 coerce = { version = "0.8", features = ["full"] }
 coerce-macros = { version = "0.2" }
@@ -18,6 +19,7 @@ tracing-opentelemetry = "0.10.0"
 tracing-subscriber = "0.2"
 opentelemetry-jaeger = "0.10"
 opentelemetry = { version = "0.11", default-features = false, features = ["trace"] }
+prost = { version = "0.11", features = ["prost-derive"] }
 
 [[bin]]
 name = "temp"
